@@ -78,16 +78,9 @@
                 <version>1.6.10</version>
             </dependency>
             <dependency>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-test-junit</artifactId>
-                <version>1.6.10</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter</artifactId>
-                <version>5.8.2</version>
-                <scope>test</scope>
+                <groupId>kr.pe.kwonnam.slf4j-lambda</groupId>
+                <artifactId>slf4j-lambda-core</artifactId>
+                <version>0.1</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -103,6 +96,56 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>1.3.0-alpha11</version>
+            </dependency>
+            <dependency>
+                <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-java8</artifactId>
+                <version>7.1.0</version>
+            </dependency>
+
+            <!-- TESTING -->
+
+            <dependency>
+                <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-java</artifactId>
+                <version>7.1.0</version>
+                <scope>test</scope>
+            </dependency>
+<!--
+            <dependency>
+                <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-spring</artifactId>
+                <version>7.1.0</version>
+                <scope>test</scope>
+            </dependency>
+-->
+            <dependency>
+                <groupId>io.cucumber</groupId>
+                <artifactId>cucumber-junit-platform-engine</artifactId>
+                <version>7.1.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>net.masterthought</groupId>
+                <artifactId>cucumber-reporting</artifactId>
+                <version>5.6.1</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-test-junit</artifactId>
+                <version>1.6.10</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.8.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.platform</groupId>
+                <artifactId>junit-platform-suite-engine</artifactId>
+                <version>1.8.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -204,7 +247,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
+                    <configuration>
+                        <argLine>--enable-preview</argLine>
+                    </configuration>
+<!--                    <configuration>
+                        <testSourceDirectory>
+                            <includes>
+                                <include>**/*RunCucumberTests.java</include>
+                            </includes>
+                        </testSourceDirectory>
+                    </configuration>
+ -->                   <version>3.0.0-M5</version>
                 </plugin>
             </plugins>
         </pluginManagement>
